...
  final QuerySnapshot usernameCheck = await FirebaseFirestore.instance
      .collection('Users')
      .where('User', isEqualTo: usuario)
      .get();

  if (usernameCheck.docs.isNotEmpty) {
    return 'Usuario ya se encuentra en uso';
  }

  if (password != confirmPassword) {
    return 'Las contraseñas no son iguales';
  }

...
  if (!isStrongPassword(password)) {
    return 'La contraseña debe contener al menos una letra, una mayúscula y un símbolo especial.';
  }

  try {
    final userCredential = await FirebaseAuth.instance.createUserWithEmailAndPassword(
      email: correo,
      password: password,
    );
    createUserDatabase(userCredential.user!.uid, usuario, correo);
    return 'ok';
  } on FirebaseAuthException catch (e) {
    if (e.code == 'email-already-in-use') {
      return 'Correo ya se encuentra en uso';
...
  if (internet == false) {
    Navigator.pop(context);
    return;
  }

  if (correo.isEmpty || password.isEmpty) {
    showSnackbar(context, 'Ingresa tu correo electrónico y contraseña.', red);
    Navigator.pop(context);
    return;
  }

  try {
    await FirebaseAuth.instance.signInWithEmailAndPassword(
...
  } on FirebaseAuthException catch (e) {
    if (e.code == 'INVALID_LOGIN_CREDENTIALS' ||
        e.code == 'user-not-found' ||
        e.code == 'wrong-password' ||
        e.code == 'invalid-email') {
      showSnackbar(context,
          'La contraseña o el correo electrónico son incorrectos', red);
      Navigator.pop(context);
    }
  }
}

// Método encargado de cerrar la sesión del usuario
...
